# radegast-agent-python

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  pypi-deploy.yml
agent/: __init__.py  autoupdate.py  cli.py  client.py  config.py  crypto.py  packs.py  tailer.py
radegast_edr_agent/: autoupdate.py  cli.py  client.py  config.py  crypto.py  exclusions.py  packs.py  process.py  tailer.py  version.py
tests/: test_cli.py  test_client.py  test_crypto.py  test_integration.py  test_packs.py  test_tailer.py  test_version.py
