[project]
name = "radegast-agent"
version = "0.1.0"
description = "Agent wrapper for radegast EDR — syncs detection packs and forwards encrypted alerts"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "ssage>=1.5.0",
    "cryptography>=44.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.22.0",
]

[project.scripts]
radegast-agent = "agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[dependency-groups]
dev = ["radegast-agent[dev]"]
