[project]
name = "radegast-edr-agent"
version = "0.5.0"
description = "Agent wrapper for radegast EDR — syncs detection packs and forwards encrypted alerts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "ssage>=1.5.0",
    "cryptography>=44.0.0",
    "pydantic-settings>=2.0.0",
    "jsonata-python>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.22.0",
]

[project.scripts]
radegast-edr-agent = "radegast_edr_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radegast_edr_agent"]

[dependency-groups]
dev = [
    "radegast-edr-agent[dev]",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "PLC0415",
]
